<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/removeAds"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="invisible"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/remove_ads_ic" />

            <ImageView
                android:id="@+id/icDrawer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drawer" />

            <TextView
                android:id="@+id/headerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_translator"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/removeAds"
                app:layout_constraintStart_toEndOf="@+id/icDrawer"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/langFromCard"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/switchLangs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drop_down" />

            <TextView
                android:id="@+id/langFromTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/select"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/langToCard"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/langFromCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switchLangs"
        app:layout_constraintTop_toTopOf="@+id/langFromCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drop_down" />

            <TextView
                android:id="@+id/langToTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/switchLangs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:tint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="@+id/langFromCard"
        app:layout_constraintEnd_toStartOf="@+id/langToCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/langFromCard"
        app:layout_constraintTop_toTopOf="@+id/langFromCard"
        app:srcCompat="@drawable/ic_swap" />

    <ImageButton
        android:id="@+id/resetViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/transparent"
        android:elevation="@dimen/_28sdp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintTop_toTopOf="@+id/textField"
        app:srcCompat="@drawable/ic_close"
        app:tint="@color/grey"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="top|start"
        android:hint="@string/txt_hint"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/outputViewsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langFromCard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/translateEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:paddingBottom="@dimen/_38sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outputViewsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rect_bg"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        tools:visibility="visible">

        <TextView
            android:id="@+id/translateOutputTv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/_8sdp"
            android:hint="@string/translation"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/shareTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fullScreenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fullscreen" />

        <ImageView
            android:id="@+id/copyTranslatedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/fullScreenTxt"
            app:layout_constraintEnd_toStartOf="@+id/fullScreenTxt"
            app:srcCompat="@drawable/ic_copy"
            app:tint="@color/grey" />

        <ImageView
            android:id="@+id/shareTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/copyTranslatedTxt"
            app:layout_constraintEnd_toStartOf="@+id/copyTranslatedTxt"
            app:srcCompat="@drawable/ic_share_grey" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/pasteTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textField"
        app:layout_constraintEnd_toStartOf="@+id/tranlateBtn"
        app:srcCompat="@drawable/ic_paste" />

    <Button
        android:id="@+id/tranlateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textField"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/selectLanguageFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="@dimen/_35sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>